<resources>
    <string name="app_name">AndroTopic</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_content">Content</string>
    <string name="prompt_date">Date (not mandatory)</string>
    <string name="login">Login</string>
    <string name="sign_in">No account yet ? Create one !</string>
    <string name="create_account">Create account</string>
    <string name="create_news">Create news</string>
    <string name="update_news">Update news</string>
    <string name="return_confirmation">No</string>
    <string name="delete_confirmation">Yes</string>
    <string name="create_topic">Create topic</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="signout">Sign Out</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_news">News</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_topic">Topics</string>
</resources>
